[gd_scene load_steps=6 format=3 uid="uid://cc5urnca01saq"]

[ext_resource type="Script" uid="uid://bme0wddocnehk" path="res://assets/scripts/end.gd" id="1_lm0ep"]
[ext_resource type="Theme" uid="uid://d4j2qqvqmtl6w" path="res://Military.tres" id="1_lry8e"]
[ext_resource type="Texture2D" uid="uid://86w68vb5nba8" path="res://assets/background_image.png" id="3_ede3x"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7wqwc"]
texture = ExtResource("3_ede3x")
modulate_color = Color(0.2484, 0.2484, 0.2484, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ede3x"]

[node name="End" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lry8e")
script = ExtResource("1_lm0ep")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7wqwc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Player {#} WON!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "123456 points!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_ede3x")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayAgainButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
